# JobHunter-DPL

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
models/: application_record.py  exceptions.py  variant_record.py
registries/: job_registry.py  variant_registry.py
repositories/: postgres_job_repository.py  postgres_variant_repository.py
shared/: __init__.py
shared/models/: __init__.py  career_job_record.py  company_record.py  job_record.py  variant_record.py
shared/registries/: __init__.py  application_log.py  base.py  career_jobs_registry.py  company_registry.py
shared/repositories/: __init__.py  postgres_application_repository.py
shared/tests/: conftest.py  test_variant_registry.py
tests/: __init__.py  test_application_log.py  test_application_record.py  test_job_record.py  test_job_registry.py  test_json_application_log.py  test_json_job_registry.py  test_json_variant_registry.py  test_variant_record.py
